--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "firebase": "^11.0.1",
     "formik": "^2.4.6",
     "https-browserify": "^1.0.0",
+    "process": "^0.11.10",
     "react": "^18.3.1",
-    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.3.1",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.26.2",
@@ -63,6 +63,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "react-app-rewired": "^2.2.1",
     "vite": "^5.4.8"
   }
 }
