--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "admindashboard",
   "version": "0.1.0",
   "private": true,
+  "resolutions": {
+  "https-browserify": "^1.0.0",
+  "stream-http": "^3.0.0",
+  "url": "^0.11.0",
+  "buffer": "^6.0.3",
+  "process": "^0.11.10"
+},
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
