--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "yup": "^1.4.0"
   },
   "scripts": {
-    "start": "set HTTPS=true&&react-app-rewired start",
+    "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
